[workspace]
resolver = "2"
members = [
    # Entities layer
    "entities/entities_data_handling",
    "entities/entities_system_integration_common",
    "entities/entities_system_integration_win32",
    "entities/entities_utilities",
    "entities/entities_io_operations",
    
    # Use Cases layer
    "usecases/usecases_memory_management",
    "usecases/usecases_process_management",
    "usecases/usecases_io_operations",
    "usecases/usecases_bifs",
    "usecases/usecases_nif_compilation",
    
    # Adapters layer
    "adapters/adapters_nifs",
    "adapters/adapters_ets_tables",
    "adapters/adapters_debugging",
    "adapters/adapters_drivers",
    "adapters/adapters_time_management",
    "adapters/adapters_system_integration_unix",
    "adapters/adapters_nif_io",
    "adapters/adapters_distribution",
    
    # Infrastructure layer
    "infrastructure/infrastructure_utilities",
    "infrastructure/infrastructure_debugging",
    "infrastructure/infrastructure_ets_tables",
    "infrastructure/infrastructure_time_management",
    "infrastructure/infrastructure_bifs",
    "infrastructure/infrastructure_code_loading",
    "infrastructure/infrastructure_data_handling",
    "infrastructure/infrastructure_bignum_encoding",
    # "infrastructure/infrastructure_bignum_encoding_gmp",  # Not needed - using malachite instead
    "infrastructure/infrastructure_trace_encoding",
    
    # Frameworks layer
    "frameworks/frameworks_utilities",
    "frameworks/frameworks_system_integration_win32",
    "frameworks/frameworks_system_integration_unix",
    "frameworks/frameworks_system_integration_common",
    "frameworks/frameworks_system_integration",
    
    # Code Management layer
    "code_management/code_management_code_loading",
    
    # API Facades layer
    "api_facades",
    "entities/entities_process",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erlang/OTP Rust Conversion"]
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

