[package]
name = "api_facades"
version = "0.1.0"
edition = "2021"
description = "API Facades Layer: Erlang compatibility layer with exact C function signatures"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
# Dependencies on all inner layers
entities_data_handling = { path = "../entities/entities_data_handling" }
entities_utilities = { path = "../entities/entities_utilities" }
entities_io_operations = { path = "../entities/entities_io_operations" }
usecases_memory_management = { path = "../usecases/usecases_memory_management" }
usecases_process_management = { path = "../usecases/usecases_process_management" }
usecases_io_operations = { path = "../usecases/usecases_io_operations" }
usecases_bifs = { path = "../usecases/usecases_bifs" }
adapters_nifs = { path = "../adapters/adapters_nifs" }
adapters_drivers = { path = "../adapters/adapters_drivers" }
infrastructure_utilities = { path = "../infrastructure/infrastructure_utilities" }
# code_management_code_loading = { path = "../code_management/code_management_code_loading" }  # Commented out - missing modules

