[package]
name = "adapters_io_operations"
version = "0.1.0"
edition = "2021"
description = "Adapters layer: I/O operations - ports, drivers"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_io_operations = { path = "../../entities/entities_io_operations" }
usecases_io_operations = { path = "../../usecases/usecases_io_operations" }

