[package]
name = "adapters_nif_io"
version = "0.1.0"
edition = "2021"
description = "Adapters layer: NIF I/O polling and event management"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_system_integration_common = { path = "../../entities/entities_system_integration_common" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.27"

