[package]
name = "adapters_nifs"
version = "0.1.0"
edition = "2021"
description = "Adapters layer: NIFs (Native Implemented Functions)"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_process = { path = "../../entities/entities_process" }
usecases_bifs = { path = "../../usecases/usecases_bifs" }
libloading = "0.8"

