[package]
name = "adapters_system_integration_unix"
version = "0.1.0"
edition = "2021"
description = "Adapters layer: Unix system integration - drivers"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_system_integration_common = { path = "../../entities/entities_system_integration_common" }
infrastructure_driver_api = { path = "../../infrastructure/infrastructure_driver_api" }

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"

