[package]
name = "entities_data_handling"
version = "0.1.0"
edition = "2021"
description = "Entities layer: Data handling - term hashing, atoms, bits, binaries, maps, atomics"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
# Standard library only - no external dependencies for entities layer

[dev-dependencies]
# Test coverage tool (install separately: cargo install cargo-tarpaulin)
# cargo-tarpaulin = "0.27"

[features]
default = []

