[package]
name = "frameworks_system_integration"
version = "0.1.0"
edition = "2021"
description = "Frameworks layer: System integration base"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
frameworks_system_integration_common = { path = "../frameworks_system_integration_common" }

