[package]
name = "frameworks_system_integration_common"
version = "0.1.0"
edition = "2021"
description = "Frameworks layer: Common system integration"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_system_integration_common = { path = "../../entities/entities_system_integration_common" }
adapters_nif_io = { path = "../../adapters/adapters_nif_io" }

