[package]
name = "frameworks_system_integration_win32"
version = "0.1.0"
edition = "2021"
description = "Frameworks layer: Windows system integration"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_system_integration_win32 = { path = "../../entities/entities_system_integration_win32" }
adapters_system_integration_common = { path = "../../adapters/adapters_system_integration_common" }

