[package]
name = "infrastructure_bignum_encoding"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer: Bignum encoding"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_utilities = { path = "../../entities/entities_utilities" }
malachite = "0.7"

