[package]
name = "infrastructure_bignum_encoding_gmp"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer: Bignum encoding with GMP"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_utilities = { path = "../../entities/entities_utilities" }
infrastructure_bignum_encoding = { path = "../infrastructure_bignum_encoding" }

