[package]
name = "infrastructure_external_format"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer: External term format encoding/decoding infrastructure"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
entities_process = { path = "../../entities/entities_process" }
infrastructure_data_handling = { path = "../infrastructure_data_handling" }
infrastructure_code_loading = { path = "../infrastructure_code_loading" }
infrastructure_bignum_encoding = { path = "../infrastructure_bignum_encoding" }

[dev-dependencies]

