[package]
name = "infrastructure_trace_encoding"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer: Trace encoding"
license = "Apache-2.0"
authors = ["Erlang/OTP Rust Conversion"]

[dependencies]
entities_data_handling = { path = "../../entities/entities_data_handling" }
infrastructure_code_loading = { path = "../infrastructure_code_loading" }

